# WireSentinel-Anonymity

./: Cargo.toml  README.md
.github/workflows/: ci.yml
analytics/: Cargo.toml
analytics/src/: advanced.rs  lib.rs  metrics.rs
anonymity-core/: Cargo.toml
anonymity-core/src/: adapter.rs  backend.rs  lib.rs  security.rs  types.rs
controller/: Cargo.toml
controller/src/: dto.rs  lib.rs
cover-traffic/: Cargo.toml
cover-traffic/src/: engine.rs  lib.rs  profile.rs
decoy-routing/: Cargo.toml
decoy-routing/src/: framework.rs  lib.rs  types.rs
discovery/: Cargo.toml
discovery/src/: engine.rs  lib.rs
docs/: architecture.md
entropy/: Cargo.toml
entropy/src/: engine.rs  lib.rs  report.rs
federation/: Cargo.toml
federation/src/: lib.rs  manager.rs
katzenpost/: Cargo.toml
katzenpost/src/: backend.rs  discovery.rs  lib.rs  types.rs
loopix/: Cargo.toml
loopix/src/: backend.rs  discovery.rs  lib.rs  types.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  manifest.rs  plugin.rs
