[package]
name = "anonymity-cover-traffic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
