[package]
name = "discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anonymity-core = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
anonymity-core = { workspace = true }
