[package]
name = "loopix"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anonymity-core = { workspace = true }
shared-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
